--- a/src/app/mainframe/mainframe.component.html
+++ b/src/app/mainframe/mainframe.component.html
@@ -6,6 +6,6 @@
     Bowling Alley
   </aside>
   <div class="content">
-    <iframe src="http://localhost:4200/#/record"></iframe>
+    <iframe src="http://localhost:4200/#/preload"></iframe>
   </div>
 </main>
