--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "novo-elements";
 html,
 body {
   padding: 0;
