--- a/public/app/mainframe/mainframe.component.html
+++ b/public/app/mainframe/mainframe.component.html
@@ -10,6 +10,6 @@
     Bowling Alley!!
   </aside>
   <div class="content">
-    <iframe src="http://localhost:3000/#/preload"></iframe>
+    <iframe src="https://jgodi.github.io/repo-test/#/preload"></iframe>
   </div>
 </main>
