better routing, server side templating

--- a/public/app/mainframe/mainframe.component.html
+++ b/public/app/mainframe/mainframe.component.html
@@ -1,4 +1,4 @@
-<header title="Bullhorn" icon="person" theme="company">
+<header title="Bullhorn - {{ singleton | json }}" icon="person" theme="company">
   <utils>
     <util-action icon="flag"></util-action>
     <util-action icon="refresh"></util-action>
@@ -7,9 +7,9 @@
 </header>
 <main>
   <aside>
-    Bowling Alley!!
+    Bowling Alley!! - {{ singleton | json }}
   </aside>
   <div class="content">
-    <iframe src="https://jgodi.github.io/repo-test/#/preload"></iframe>
+    <iframe src="http://localhost:3000/#/content"></iframe>
   </div>
 </main>
