--- a/public/app/preload/preload.component.html
+++ b/public/app/preload/preload.component.html
@@ -1,5 +1,2 @@
-I am just a pre-load route... my whole responsibility is to be blank so NG2 bootstraps in this iFrame...
-<br/>
-<br/> After {{ timeLeft }}s the record app will appear and should load here...
-<br/>
-<br/> Just imagine a beautiful loading screen here!
+<p> Preload - Singleton - {{ singleton | json }}</p>
+<router-outlet></router-outlet>
